# ObserverModules

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  api.h  archive.cpp  archive.h  copy_debug.cmd  copy_dlls.cmd  dll.cpp  dll.def  meson.build  vcpkg.json
.github/workflows/: main.yml
licenses/: zanzapak.txt
renpy/: renpy.cpp  renpy.def  renpy.h
renpy/legacy/renpy/: archive.cpp  python.cpp  python.h
src/: api.h  archive.cpp  archive.h  dll.cpp
src/modules/: extractor.h
src/modules/renpy/: module.cpp  observer_user.ini  pickle.cpp  pickle.h  python.cpp  python.h  renpy.cpp
src/modules/renpy/legacy/: _stream.cpp  _stream.h  kriabal.cpp  kriabal.h  old_archive.cpp  old_archive.h  renpy.cpp
src/modules/renpy/python/: _ref.h  context.cpp  dict.cpp  list.cpp  python.h  tuple.cpp
src/modules/rpgmaker/: observer_user.ini  rgss3a_parser.cpp  rgss_parser.cpp  rgss_parser.h  rgssad_parser.cpp  rpgmaker.cpp  rpgmaker.def
src/modules/unity/python/: archive.py  extractors.py  pyproject.toml  test.cmd  test.py
src/modules/zanzarah/: module.cpp  observer_user.ini  zanzarah.cpp
src/tests/: renpy.cpp  rpgmaker.cpp  zanzarah.cpp
src/tests/framework/: make_listing.py  observer.cpp  observer.h  testcase.cpp  testcase.h
src/tests/framework/tools/: pyproject.toml
zanzarah/: zanzarah.cpp  zanzarah.def  zanzarah.h
